// version
syntax = "proto3";

package proto;


// FIXME: import raftpb.Message, not marshal it again.
// modify include path to solve this.
//import "github.com/coreos/etcd/raft/raftpb/raft.proto";


// The Raft Group service
service RaftGrouper {
  // Sends a raft message to peer
  rpc Send (stream SendRequest) returns (SendReply) {}

  // snapshot reader
  rpc SnapshotRead(SnapshotReaderRequest) returns (stream SnapshotResponse) {}
}

// message
message Metadata {
  int64 group_id = 1;
}

message Playload {
  bytes data = 1;
}

// FIXME: use stream to send this
message SendRequest {
  oneof msg {
    Metadata meta    = 1;
    Playload payload = 2;
  }
}

message ACK {
  int64  code   = 1;
  string detail = 2;
}

message SendReply {
  ACK ack = 1;
}

// snapshot
message SnapshotReaderRequest {
  int64 group_id = 1;
  bytes parter   = 2;
}

message Chunk {
  bytes chunk = 1;
}

message SnapshotResponse {
  Chunk chunk = 1;
}
